@@ -49,8 +49,7 @@
 #include "ErrorProcedures.h"
 #include "BinaryOutputPort.h"
 #include "TextualOutputPort.h"
-#include "FileBinaryOutputPort.h"
-#include "FileBinaryInputPort.h"
+#include "StandardOutputPort.h"
 #include "StandardInputPort.h"
 #include "TextualInputPort.h"
 #include "UTF8Codec.h"
@@ -187,8 +186,8 @@ int main(int argc, char *argv[])
 
     Transcoder* transcoder = Transcoder::nativeTranscoder();
     const Object inPort    = Object::makeTextualInputPort(new StandardInputPort(), transcoder);
-    const Object outPort   = Object::makeTextualOutputPort(new FileBinaryOutputPort(fileno(stdout)), transcoder);
-    const Object errorPort = Object::makeTextualOutputPort(new FileBinaryOutputPort(fileno(stderr)), transcoder);
+    const Object outPort   = Object::makeTextualOutputPort(new StandardOutputPort(fileno(stdout)), transcoder);
+    const Object errorPort = Object::makeTextualOutputPort(new StandardOutputPort(fileno(stderr)), transcoder);
 
     theVM = new VM(10000, outPort, errorPort, inPort, isProfiler);
     theVM->loadCompiler();
